phase2_Dev/src/objects/Cases_Allegations__c.object
<CustomObject>
    <description>Link a case to allegations</description>
    <fields>
        <fullName>Allegation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Allegation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Allegation__c.isActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Allegation__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Case_Allegations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Allegations</relationshipLabel>
        <relationshipName>Case_Allegations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Provide the reason and comments for this allegation</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Allegation Description</description>
        <formula>Allegation__r.Description__c</formula>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <label>Case Allegation</label>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Allegations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Creation_Updates_on_Closed_Case</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Case__r.Status,&apos;Closed&apos;) &amp;&amp; !ISBLANK($UserRole.Name) &amp;&amp; !CONTAINS($UserRole.Name,&apos;Director&apos;) &amp;&amp; !CONTAINS($UserRole.Name,&apos;Supervisor&apos;)</errorConditionFormula>
        <errorMessage>Allegations can&apos;t be created or updated on &apos;Closed&apos; Cases</errorMessage>
    </validationRules>
</CustomObject>